Added Sort By Feature
a) Sort By Date Ascending
b) Sort By Value Date Ascending
c) Sort By Balance AMT Descending

--- a/src/components/transactionHistoryContent.css
+++ b/src/components/transactionHistoryContent.css
@@ -10,8 +10,16 @@
 
 .TransactionHistoryContent .header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.TransactionHistoryContent .header .header-right,
+.TransactionHistoryContent .header .header-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .TransactionHistoryContent .header svg {
