--- a/src/components/transactionHistoryContent.css
+++ b/src/components/transactionHistoryContent.css
@@ -102,3 +102,20 @@
 .prev-btn.disabled {
   cursor: not-allowed;
 }
+
+.search-box {
+  height: 35px;
+  box-sizing: border-box;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 1px solid #dbe2e8;
+  font-size: 14px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  color: #2e3d49;
+  width: 200px;
+  border-radius: 20px;
+  letter-spacing: 1px;
+  box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
+  margin-right: 25px;
+}
